# Bella_Agent

./: COMMIT_EDITMSG  HEAD  Langching.md  PKG-INFO  README.md  __init__.py  additives.py  api.py  base.py  base_chat_message_history.py  base_memory.py  basic_chat.py  bella-chat-1783966432312.md  bella_persona.json  brain.py  bridge.py  buffer.py  buffer_window.py  builder-debug.yml  builder-effective-config.yaml  checkpoint.py  cli.py  client.py  combined.py  config  config.json  config_example.json  conftest.py  conversations.jsonl  db.py  engine.py  entity.py  entry_points.txt  episodes.jsonl  file.py  identity_profile.json  in_memory.py  index  json.py  kg.py  (+54 more)
