[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bella-memory"
version = "0.1.0"
description = "A comprehensive, drop-in memory layer for AI projects. LangChain-style memory abstractions with local-first persistence."
authors = [{ name = "Charles Watkins / Bella Memory", email = "dev@techhack101.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28",
    "numpy>=1.24",
    "redis>=5.0",
    "networkx>=3.0",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "fastapi>=0.100",
    "uvicorn>=0.23",
]

[project.scripts]
bella-memory-cli = "bella_memory.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bella_memory*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
